--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: ELSM
 author: Naila Hamid, Nazar Khan and Arbish Akram
+description: Computer Vision & Machine Learning Group, Department of Computer Science, University of the Punjab, Lahore, Pakistan
 theme: jekyll-theme-minimal
