--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: ELSM
-author: Naila Hamid
+about me: Naila Hamid
+email: naila.hamid@pucit.edu.pk
 description: Computer Vision & Machine Learning Group, Department of Computer Science, University of the Punjab, Lahore, Pakistan
 theme: jekyll-theme-minimal
